# backend_homework

homework_1/: .gitignore  exceptions.py  main.py  pyproject.toml
homework_1/api/: __init__.py  auth.py  router.py  tasks.py
homework_1/core/: auth.py  config.py  database.py
homework_1/models/: __init__.py  tasks.py  users.py
homework_1/repositories/: __init__.py  tasks.py  users.py
homework_1/schemas/: __init__.py  auth.py  tasks.py  users.py
homework_1/services/: __init__.py  auth.py  tasks.py
homework_1/tests/integration/: test_tasks.py
homework_1/tests/unit/services/: test_tasks.py
homework_2_async/post_app/: .env.docker  .env.local  dependency.py  pyproject.toml  readme.md
homework_2_async/post_app/adapters/storage/: base.py  s3.py
homework_2_async/post_app/api/: auth.py  posts.py  router.py
homework_2_async/post_app/core/: adapters.py  config.py  database.py
homework_2_async/post_app/repositories/: posts.py  users.py
homework_2_async/post_app/schemas/: posts.py  users.py
homework_2_async/post_app/services/: posts.py  user.py
